--- a/AspStudio/Views/Management/Contacts.cshtml
+++ b/AspStudio/Views/Management/Contacts.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Domain.Entities;
 @model IEnumerable<SOLDOZA_MST_GRL_CONTACTOS>
 @{
-    ViewData["Title"] = "Projects";
+    ViewData["Title"] = "Contacts";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
