--- a/AspStudio/Views/Management/Projects.cshtml
+++ b/AspStudio/Views/Management/Projects.cshtml
@@ -12,7 +12,7 @@
     <link href="~/lib/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.0.0/dist/css/tom-select.css" rel="stylesheet">
-    
+    <link href="~/lib/sweetalert2/css/sweetalert2.css" rel="stylesheet" />
 }
 
 <ul class="breadcrumb">
@@ -150,7 +150,7 @@
     <script src="~/lib/bootstrap-table/dist/bootstrap-table.min.js"></script>
     <script src="~/js/demo/table-plugins.demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.0.0/dist/js/tom-select.complete.min.js"></script>
-
+    <script src="~/lib/sweetalert2/js/sweetalert2.js"></script>
 
     <script>
 
