--- a/AspStudio/Views/Shared/_Footer.cshtml
+++ b/AspStudio/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- BEGIN #footer -->
 <div id="footer" class="app-footer">
-    &copy; 2021 seanTheme All Right Reserved
+    &copy; 2022 Soldoza All Right Reserved
 </div>
 <!-- END #footer -->
