--- a/AspStudio/Views/Shared/_Layout.cshtml
+++ b/AspStudio/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
     @RenderSection("Styles", required: false)
 </head>
-<body class="@ViewData["BodyClass"] bg-gradient-light">
+<body class="@ViewData["BodyClass"] bg-light">
     <!-- BEGIN #app -->
     <div id="app" class="app @ViewData["AppClass"]">
         @if (ViewData["AppWithoutHeader"] == null)
